--- a/7-questions/setup/index.html
+++ b/7-questions/setup/index.html
@@ -18,7 +18,88 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>questions project</h1>
+    <secttion class="question">
+      <!--title-->
+      <div class="title">
+        <h2>general questions</h2>
+      </div>
+      <!--questions-->
+      <div class="section-center">
+        <!--single question-->
+        <article class="question">
+          <!--question-title-->
+          <div class="question-title">
+            <p>Do you accept all major credit cards?</p>
+            <button type="button" class="question-btn">
+              <span class="plus-icon">
+                <i class="far fa-plus-square"></i>
+              </span>
+              <span class="minus-icon">
+                <i class="far fa-minus-square"></i>
+              </span>
+            </button>
+          </div>
+          <!--question text-->
+          <div class="question-text">
+            <p>Lorem ipsum dolor sit amet
+              consectetur adipisicing elit. Magni,
+              distinctio. Harum, quo? Consequuntur
+              iure similique dolorem assumenda doloribus
+              suscipit? Doloremque vitae neque ex minima,
+              vero aut aliquam ut totam labore.</p>
+          </div>
+        </article>
+        <!--end question-->        <!--single question-->
+        <article class="question">
+          <!--question-title-->
+          <div class="question-title">
+            <p>Do you use organic ingredients?</p>
+            <button type="button" class="question-btn">
+              <span class="plus-icon">
+                <i class="far fa-plus-square"></i>
+              </span>
+              <span class="minus-icon">
+                <i class="far fa-minus-square"></i>
+              </span>
+            </button>
+          </div>
+          <!--question text-->
+          <div class="question-text">
+            <p>Lorem ipsum dolor sit amet
+              consectetur adipisicing elit. Magni,
+              distinctio. Harum, quo? Consequuntur
+              iure similique dolorem assumenda doloribus
+              suscipit? Doloremque vitae neque ex minima,
+              vero aut aliquam ut totam labore.</p>
+          </div>
+        </article>
+        <!--end question-->        <!--single question-->
+        <article class="question">
+          <!--question-title-->
+          <div class="question-title">
+            <p>Do you support local farmers?</p>
+            <button type="button" class="question-btn">
+              <span class="plus-icon">
+                <i class="far fa-plus-square"></i>
+              </span>
+              <span class="minus-icon">
+                <i class="far fa-minus-square"></i>
+              </span>
+            </button>
+          </div>
+          <!--question text-->
+          <div class="question-text">
+            <p>Lorem ipsum dolor sit amet
+              consectetur adipisicing elit. Magni,
+              distinctio. Harum, quo? Consequuntur
+              iure similique dolorem assumenda doloribus
+              suscipit? Doloremque vitae neque ex minima,
+              vero aut aliquam ut totam labore.</p>
+          </div>
+        </article>
+        <!--end question-->
+      </div>
+    </secttion>
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
