--- a/8-menu/setup/index.html
+++ b/8-menu/setup/index.html
@@ -13,7 +13,45 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>menu project</h1>
+    <section class="menu">
+      <!--Title-->
+      <div class="title">
+        <h2>Our Menu</h2>
+        <div class="underline"></div>
+      </div>
+      <!--filter buttons-->
+      <div class="btn-container">
+        <!-- <button class="filter-btn"type='button'
+        data-id="all">all</button>
+        <button class="filter-btn"type='button'
+        data-id="breakfast">breakfast</button>
+        <button class="filter-btn"type='button'
+        data-id="lunch">lunch</button>
+        <button class="filter-btn"type='button'
+        data-id="shakes">shakes</button> -->
+      </div>
+      <!--menu items-->
+      <div class="section-center">
+        <!--single item-->
+        <!-- <article class="menu-item">
+          <img src="menu-item.jpeg" class="photo" alt="menu item">
+          <div class="item-info">
+            <header>
+              <h4>buttermilk pancakes</h4>
+              <h4 class='price'>$15</h4>
+            </header>
+            <p class="item-text">Lorem ipsum dolor sit amet,
+              consectetur adipisicing elit. Excepturi corrupti
+              ratione vitae, obcaecati debitis voluptates
+              culpa? Error corporis accusantium officia quod,
+              exercitationem molestiae doloremque vero accusamus
+              esse laudantium consequuntur dolores!
+            </p>
+          </div>
+        </article> -->
+        <!--end single item-->
+      </div>
+    </section>
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
